[FIX] Fixing the article

--- a/_posts/2022-12-03-procgen.md
+++ b/_posts/2022-12-03-procgen.md
@@ -34,7 +34,7 @@ Anyways, let's get on topic! But first, let's check what we should never do.
 
 # How to NOT do multiplayer procedural generation?
 
-If you plan on generating a level composed by thousands or hundreds of Actors, that is supposed to work in multiplayer, please, **despite replicating all the Actors**. It is a **terrible idea** even with a relatively low quantity of Actors. The initial replication would send data about every actor to all your connections, and if your game supports late joining, you'll be sending information of the total quantity of Actors every time someone connects. 
+If you plan on generating a level composed by thousands or hundreds of Actors, that is supposed to work in multiplayer, please, **do not replicate all the Actors**. It is a **terrible idea** even with a relatively low quantity of Actors. The initial replication would send data about every actor to all your connections, and if your game supports late joining, you'll be sending information of the total quantity of Actors every time someone connects. 
 
 The text above assumes the setup is running using dormancy, if that isn't the case then, all your Actors will be considered for replication every net update, increasing the overhead of `NetBroadcastTickTime` that we explored in a [previous article](https://vorixo.github.io/devtricks/network-managers/).
 
@@ -46,17 +46,15 @@ In this Section we will explain how to properly approach multiplayer-friendly pr
 
 ## Net startup Actor and Net addressable
 
-To build our multiplayer procedural generation, we are relying on a niche concept that we don't speak about often in multiplayer articles: **Net startup Actors**.
+To build our multiplayer procedural generation, we are relying on a niche concept that we don't speak about often in multiplayer articles: **Net startup Actors** (also called **Net static Actors**).
 
-So... What is a **Net startup Actor**? A **Net startup Actor** is an Actor that is loaded directly from the map, and for networking purposes can be **addressed** by its **full path name**. In addition **Net startup Actors** don't get destroyed when they become not relevant for the client. 
+So... What is a **Net startup Actor**? A **Net startup Actor** is an Actor that is loaded directly from the map, and for networking purposes can be **addressed** by its **full path name**. In addition **Net startup Actors** don't get destroyed when they stop being relevant for the Client. 
 
 However, we can only achieve this **network addressable** property if `bNetLoadOnClient` is set to `true`, which means that the actor gets loaded on network clients during map load.
 
-In short, a net addressable Actor is an Actor that we can use in RPCs without losing the reference of the Actor. 
-
 So, in order to achieve a **net addressable** Net startup Actor, we have to accomplish the following conditions:
-- They exist in Server and Client at a map load time: A server Actor should relate to a client Actor.
-- They are stably named so RPCs "know" where to go: The server and client Actor should have the same "path name".
+- They Actor should exist in Server and Client at a map load time: A Server Actor should relate to a Client Actor.
+- They are stably named: The Server and Client Actor should have the same "path name" so that the [`FNetworkGUID`](https://docs.unrealengine.com/4.27/en-US/InteractiveExperiences/Networking/Actors/Properties/ObjectReferences/) can be generated.
 
 Now that we learned what a **Net startup Actor** is, let's see how we can use this concept to build our multiplayer and super-reliable procedural generation.
 
@@ -69,7 +67,7 @@ Our procedural generation solution will make use of these properties to create n
 
 ### Server side
 
-Let's start with the server code. Once the GameState initializes, we generate the random seed and we start the procedural generation:
+Let's start with the Server code. Once the GameState initializes, we generate the random seed and we start the procedural generation:
 
 {% highlight c++ %}
 void AMyGameMode::InitGameState()
@@ -88,12 +86,12 @@ void AMyGameMode::InitGameState()
 }
 {% endhighlight %}
 
-In my case I decided to use an Actor placed on the map (`AProcGenSpawner`), to do this. It is also convenient to delay the server side `BeginPlay` until all the client controllers finish the procedural generation process (`bClientFinishedProceduralGeneration`). For that we'll override the following two functions:
+In my case I decided to use an Actor placed on the map (`AProcGenSpawner`), to do this. It is also convenient to delay the Server-side `BeginPlay` until all the Client controllers finish the procedural generation process (`bClientFinishedProceduralGeneration`). For that we'll override the following two functions:
 
 {% highlight c++ %}
 bool AMyGameMode::ReadyToStartMatch_Implementation()
 {	
-	// Check if clients have finished procgen: We delay begin play of world actors until clients have finished procgen
+	// Check if clients have finished procgen: We delay begin play of world Actors until clients have finished procgen
 	for (FConstPlayerControllerIterator Iterator = GetWorld()->GetPlayerControllerIterator(); Iterator; ++Iterator)
 	{
 		if (APCPlayerController* PC = Cast<APCPlayerController>(Iterator->Get()))
@@ -133,7 +131,7 @@ void AMyGameMode::HandleMatchIsWaitingToStart()
 
 ### Client side
 
-Our controller will request the proc-gen seed to the server on `PostNetInit` by means of a server reliable RPC (`ServerRequestProcGenData`). From the server, the client will receive the server seed by means of a client reliable RPC (`ClientReceiveProcGenData`). Once the client receives the data, in my case a single number (but it can be extended to whatever your procedural generation algorithm needs), it can begin the procedural generation.
+Our controller will request the proc-gen seed to the Server on `PostNetInit` by means of a Server reliable RPC (`ServerRequestProcGenData`). From the Server, the Client will receive the Server seed by means of a Client reliable RPC (`ClientReceiveProcGenData`). Once the Client receives the data, in my case a single number (but it can be extended to whatever your procedural generation algorithm needs), it can begin the procedural generation.
 
 {% highlight c++ %}
 void APCPlayerController::ServerClientFinishedProcGen_Implementation()
@@ -162,7 +160,10 @@ void APCPlayerController::ClientReceiveProcGenData_Implementation(uint32 randomS
 
 	ServerClientFinishedProcGen();
 
-	GetWorldSettings()->NotifyBeginPlay();
+	if (AMyGameState* GS = GetWorld()->GetGameState<AMyGameState>())
+	{
+		GS->StartBeginPlay();
+	}
 }
 
 void APCPlayerController::PostNetInit()
@@ -182,21 +183,28 @@ void APCPlayerController::PostInitializeComponents()
 }
 {% endhighlight %}
 
-One the client is done generating it will set `bClientFinishedProceduralGeneration` to `true` by means of a reliable server RPC (`ServerClientFinishedProcGen`). As we did in the server, it is convenient to delay the client side `BeginPlay` until we are done generating, for that, override the following function from `AGameState`:
+One the client is done generating it will set `bClientFinishedProceduralGeneration` to `true` by means of a reliable Server RPC (`ServerClientFinishedProcGen`). As we did in the Server, it is convenient to delay the Client-side `BeginPlay` until we are done generating, for that, override the following function from `AGameState`:
 
 {% highlight c++ %}
-void AMyGameState::OnRep_ReplicatedHasBegunPlay()
+void AMyGameState::StartBeginPlay()
 {
-	if (bReplicatedHasBegunPlay && GetLocalRole() != ROLE_Authority)
+	const APCPlayerController* PC = Cast<APCPlayerController>(GetWorld()->GetFirstPlayerController());
+	if (PC && PC->bClientFinishedProceduralGeneration && bReplicatedHasBegunPlay && GetLocalRole() != ROLE_Authority)
 	{
+		GetWorldSettings()->NotifyBeginPlay();
 		GetWorldSettings()->NotifyMatchStarted();
 	}
 }
+
+void AMyGameState::OnRep_ReplicatedHasBegunPlay()
+{
+	StartBeginPlay();
+}
 {% endhighlight %}
 
-### Creating net startup actors
+### Creating net startup Actors
 
-As I mentioned above, the key of procedural generation is creating net startup actors following the requirements exposed in the previous Section:
+As I mentioned above, the key of procedural generation is creating net startup Actors following the requirements exposed in the previous Section:
 
 {% highlight c++ %}
 static uint32 procGenIndex = 0;
@@ -218,13 +226,15 @@ void AProcGenSpawner::SpawnAt(FRandomStream& RandomStream)
 	const float Y = RandomStream.RandRange(-1000, 1000);
 	const FVector LocStream(X, Y, 92.f);
 
-	FActorSpawnParameters SpawnParams;
+	FActorspawnParameters SpawnParams;
 	SpawnParams.Name = FName(*FString(ProceduralActor->GetName() + "_" + FString::FromInt(procGenIndex)));
-	SpawnParams.NameMode = FActorSpawnParameters::ESpawnActorNameMode::Required_Fatal;
+	SpawnParams.NameMode = FActorspawnParameters::ESpawnActorNameMode::Required_Fatal;
 	SpawnParams.SpawnCollisionHandlingOverride = ESpawnActorCollisionHandlingMethod::AlwaysSpawn;
 	SpawnParams.bDeferConstruction = true;
 	LastProcActor = GetWorld()->SpawnActor<AProceduralActor>(ProceduralActor, LocStream, FRotator::ZeroRotator, SpawnParams);
 	LastProcActor->bNetStartup = true;
+	// This let us differentiate procedurally generated Actors from other Actors in a generic way
+	LastProcActor->Tags.Add(TEXT("ProcGen"));
 	LastProcActor->FinishSpawning(FTransform(FRotator::ZeroRotator, LocStream, FVector::OneVector));
 
 	procGenIndex++;
@@ -238,25 +248,18 @@ Note that this generation algorithm serves as a proof of concept to explain how 
 
 #### Supporting replication
 
-Sometimes we want these procedural Actors to support replication. If we try to replicate a procedural Actor using the current configuration, we will notice that the Actor will not replicate. This is because an attempt has been made to open the replication channel with a connection that does not yet have that client Actor, as it has not finished generating the procedural content. 
+Sometimes we want these procedural Actors to support replication. By setting `bNetStartup` to `true`, we are telling the engine to treat those Actors as if they were loaded from the level. Because of this, Unreal Engine assumes that the Client is able to acknowledge the `FNetworkGUID` for those Actors any time the Server sends them. This might not be the case in our scenario, as **there is no guarantee that the Client has finished spawning them yet**. Therefore, we must prevent those Actors from replicating before we know that the Client can acknowledge their existence. 
 
-For that reason, we have to make the connection not relevant for the Actor until the client-side procedural generation algorithm finishes. And we are in luck, since we created `bClientFinishedProceduralGeneration` for other purposes, so we can now reuse this boolean for this purpose. One way to make the connection not relevant is by overriding `IsNetRelevantFor` in the procedurally generated Actor:
+For that reason, we have to make the connection not relevant for the Actor until the Client-side procedural generation algorithm finishes. And we are in luck, since we created `bClientFinishedProceduralGeneration`, so we can now reuse this boolean for this purpose. One way to make the connection not relevant is by overriding `IsNetRelevantFor` in the procedurally generated Actor:
 
 {% highlight c++ %}
 bool AProceduralActor::IsNetRelevantFor(const AActor* RealViewer, const AActor* ViewTarget, const FVector& SrcLocation) const
 {
-	if (const ACharacter* Character = Cast<ACharacter>(ViewTarget))
+	if (const APCPlayerController* PC = Cast<APCPlayerController>(RealViewer))
 	{
-		if (APCPlayerController* PC = Cast<APCPlayerController>(Character->GetController()))
-		{
-			return PC->bClientFinishedProceduralGeneration && Super::IsNetRelevantFor(RealViewer, ViewTarget, SrcLocation);
-		}
-		return Super::IsNetRelevantFor(RealViewer, ViewTarget, SrcLocation);
+		return PC->bClientFinishedProceduralGeneration && Super::IsNetRelevantFor(RealViewer, ViewTarget, SrcLocation);
 	}
-	else
-	{
-		return Super::IsNetRelevantFor(RealViewer, ViewTarget, SrcLocation);
-	}
+	return Super::IsNetRelevantFor(RealViewer, ViewTarget, SrcLocation);
 }
 {% endhighlight %}
 
@@ -268,7 +271,7 @@ If you did everything accordingly you should be seeing something like this, in w
 
 ![Procedural generation results]({{ '/' | absolute_url }}/assets/images/per-post/procgen/results.jpg){: .align-center}
 
-Note that this toy example uses random locations from a seed to place the actors. And as we can see the positions are equivalent in server and client.
+Note that this toy example uses random locations from a seed to place the Actors. And as we can see the positions are equivalent in Server and Client.
 
 # Conclusion
 
@@ -280,7 +283,7 @@ Now is up to you to extend this approach with cool generation algorithms and mor
 
 Some ideas that pop in my head are:
 - Better way to deterministically name the Actors.
-- Make it compatible with world partition server and client streaming!
+- Make it compatible with world partition Server and Client streaming!
 - Context driven procedural generation (ie: Use more data than just the seed!)
 - Using the replication graph instead of `IsNetRelevantFor` to support replication.
 
