--- a/_posts/2022-12-03-procgen.md
+++ b/_posts/2022-12-03-procgen.md
@@ -25,7 +25,7 @@ In this post we are not going to tackle generation algorithms, as that is very g
 
 Most of these concepts have been explained to me by a very good friend of mine, [Zlo](https://www.linkedin.com/in/josip-duvancic-933934254/), for that reason, we joined efforts to create this article and a sample code so that the community can learn about the technicalities and gotchas of procedural generation in multiplayer.
 
-This article requires understanding Unreal's networking system (PRCs and replication), so before deep-diving into the fluff that I'm about to write below, I recommend revising the following resources:
+This article requires understanding Unreal's networking system (RPCs and replication), so before deep-diving into the fluff that I'm about to write below, I recommend revising the following resources:
 - Cedric's [Network Compendium](https://cedric-neukirchen.net/Downloads/Compendium/UE4_Network_Compendium_by_Cedric_eXi_Neukirchen.pdf)
 - [Stateful replication](https://vorixo.github.io/devtricks/stateful-events-multiplayer/)
 - [Networking atomicity](https://vorixo.github.io/devtricks/atomicity/)
@@ -53,8 +53,8 @@ So... What is a **Net startup Actor**? A **Net startup Actor** is an Actor that 
 However, we can only achieve this **network addressable** property if `bNetLoadOnClient` is set to `true`, which means that the actor gets loaded on network clients during map load.
 
 So, in order to achieve a **net addressable** Net startup Actor, we have to accomplish the following conditions:
-- They Actor should exist in Server and Client at a map load time: A Server Actor should relate to a Client Actor.
-- They are stably named: The Server and Client Actor should have the same "path name" so that the [`FNetworkGUID`](https://docs.unrealengine.com/4.27/en-US/InteractiveExperiences/Networking/Actors/Properties/ObjectReferences/) can be generated.
+- The Actor should exist in Server and Client at a map load time: A Server Actor should relate to a Client Actor.
+- The Actor should be stably named: The Server and Client Actor should have the same "path name" so that the [`FNetworkGUID`](https://docs.unrealengine.com/4.27/en-US/InteractiveExperiences/Networking/Actors/Properties/ObjectReferences/) can be generated.
 
 Now that we learned what a **Net startup Actor** is, let's see how we can use this concept to build our multiplayer and super-reliable procedural generation.
 
@@ -183,7 +183,7 @@ void APCPlayerController::PostInitializeComponents()
 }
 {% endhighlight %}
 
-One the client is done generating it will set `bClientFinishedProceduralGeneration` to `true` by means of a reliable Server RPC (`ServerClientFinishedProcGen`). As we did in the Server, it is convenient to delay the Client-side `BeginPlay` until we are done generating, for that, override the following function from `AGameState`:
+Once the client is done generating it will set `bClientFinishedProceduralGeneration` to `true` by means of a reliable Server RPC (`ServerClientFinishedProcGen`). As we did in the Server, it is convenient to delay the Client-side `BeginPlay` until we are done generating, for that, override the following function from `AGameState`:
 
 {% highlight c++ %}
 void AMyGameState::StartBeginPlay()
@@ -250,7 +250,7 @@ Note that this generation algorithm serves as a proof of concept to explain how 
 
 Sometimes we want these procedural Actors to support replication. By setting `bNetStartup` to `true`, we are telling the engine to treat those Actors as if they were loaded from the level. Because of this, Unreal Engine assumes that the Client is able to acknowledge the `FNetworkGUID` for those Actors any time the Server sends them. This might not be the case in our scenario, as **there is no guarantee that the Client has finished spawning them yet**. Therefore, we must prevent those Actors from replicating before we know that the Client can acknowledge their existence. 
 
-For that reason, we have to make the connection not relevant for the Actor until the Client-side procedural generation algorithm finishes. And we are in luck, since we created `bClientFinishedProceduralGeneration`, so we can now reuse this boolean for this purpose. One way to make the connection not relevant is by overriding `IsNetRelevantFor` in the procedurally generated Actor:
+For that reason, we have to make the Actor not relevant for the connection until the Client-side procedural generation algorithm finishes. And we are in luck, since we created `bClientFinishedProceduralGeneration`, so we can now reuse this boolean for this purpose. One way to make the Actor not relevant for the connection is by overriding `IsNetRelevantFor` in the procedurally generated Actor:
 
 {% highlight c++ %}
 bool AProceduralActor::IsNetRelevantFor(const AActor* RealViewer, const AActor* ViewTarget, const FVector& SrcLocation) const
