[FIX] Fixing null safety checks, thanks to @Thom from Slackers

--- a/_posts/2022-12-03-procgen.md
+++ b/_posts/2022-12-03-procgen.md
@@ -80,8 +80,9 @@ void AMyGameMode::InitGameState()
 		break;
 	}
 
-	RandomSeed = FMath::Rand();
+	if (ProcGenSpawner == nullptr) return;
 
+	RandomSeed = FMath::Rand();
 	ProcGenSpawner->ProcGen(RandomSeed);
 }
 {% endhighlight %}
@@ -156,8 +157,9 @@ void APCPlayerController::ClientReceiveProcGenData_Implementation(uint32 randomS
 		break;
 	}
 
-	ClientSpawner->ProcGen(randomSeed);
+	if (ClientSpawner == nullptr) return;
 
+	ClientSpawner->ProcGen(randomSeed);
 	ServerClientFinishedProcGen();
 
 	if (AMyGameState* GS = GetWorld()->GetGameState<AMyGameState>())
