[FIX] Fixing deprecated IsServer call in the ProcGen article

--- a/_posts/2022-12-03-procgen.md
+++ b/_posts/2022-12-03-procgen.md
@@ -178,7 +178,7 @@ void APCPlayerController::PostNetInit()
 void APCPlayerController::PostInitializeComponents()
 {
 	Super::PostInitializeComponents();
-	if (IsLocalController() && GetWorld()->IsServer())
+	if (IsLocalController() && GetWorld()->GetNetMode() < ENetMode::NM_Client)
 	{
 		bClientFinishedProceduralGeneration = true;
 	}
