[FIX] Little typo

--- a/_posts/2023-02-19-killcam.md
+++ b/_posts/2023-02-19-killcam.md
@@ -19,7 +19,7 @@ In this article we'll learn how to implement a killcam in Lyra.
 
 # Introduction
 
-Instant Replays (or Killcams) can help the player to understand how his character died during a game. They can be very useful in competitive scenearios to visualize the position of the instigator at the moment of your death, so they will play an important role in your game design if you decide to bring them.
+Instant replays (or Killcams) can help the player understand how their character died during a game. They can be very useful in competitive scenarios to visualize the position of the instigator at the moment of your death, so they will play an important role in your game design if you decide to bring them in.
 
 <iframe width="480" height="270" src="https://www.youtube.com/embed/mLRbZJS5A_E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
