[FIX] Misc fixes to the killcam article

--- a/_posts/2023-02-19-killcam.md
+++ b/_posts/2023-02-19-killcam.md
@@ -117,7 +117,7 @@ void ULyraHealthComponent::ClientHandleOutOfHealth_Implementation(const AActor* 
 	}	
 }
 
-void ALyraPlayerController::StartKillcam(APlayerState* DamageInstigator, AActor* DamageCauser)
+void ALyraPlayerController::StartKillcam(const APlayerState* const DamageInstigator, const AActor* const DamageCauser)
 {
 	if (ULyraLocalPlayer* LocalPlayer = Cast<ULyraLocalPlayer>(Player))
 	{
@@ -148,6 +148,21 @@ void ALyraPlayerController::ServerRequestKillcamStop_Implementation()
 `ClientHandleOutOfHealth` is a Reliable Client RPC that triggers the KillCam replay by calling `StartKillcam` in `ALyraPlayerController`. The timer inside `StartKillcam` stops the instant replay by calling `FinishKillcam`, which also notifies the server that the killcam stopped. `FinishKillcam` can also be mapped to an input action to skip the instant replay. 
 
 `ServerRequestKillcamStop` can be used to notify the server that we are ready to respawn, however, to simplify our setup, we will rely on the `RespawnDelayDuration` variable defined in the `GA_AutoRespawn` Blueprint Ability.
+
+In addition we have to prevent the experience to load, for that we need to ensure `OnExperienceLoadComplete` does early out in our replay world. The best way I found for this is by checking against the `DynamicDuplicatedLevels` collection, however note that there might be better ways to do this, if you find out a better one, please let me know!
+
+{% highlight c++ %}
+void ULyraExperienceManagerComponent::OnExperienceLoadComplete()
+{
+	FLevelCollection* const DuplicateCollection = GetWorld()->FindCollectionByType(ELevelCollectionType::DynamicDuplicatedLevels);
+	// Nothing to do here if the DuplicateCollection exists and is visible
+	if (DuplicateCollection && DuplicateCollection->IsVisible())
+	{
+		return;
+	}
+	...
+}
+{% endhighlight %}
 
 For preview purposes, initialize these variables to the following values:
 - `RespawnDelayDuration`: 10.f - This variable is used in `GA_AutoRespawn` to determine the time between the character death and its respawn through `RequestPlayerRestartNextFrame`.
@@ -208,16 +223,6 @@ void UKillcamPlayback::SetViewTargetToKillingActor()
 				}
 			}
 		}
-	}
-}
-
-void ULyraCameraComponent::PushCameraMode(TSubclassOf<ULyraCameraMode> CameraModeClass)
-{
-	check(CameraModeStack);
-
-	if (CameraModeStack->IsStackActivate())
-	{
-		CameraModeStack->PushCameraMode(CameraModeClass);
 	}
 }
 {% endhighlight %}
