[FIX] Changing SetPawn for PossessedPawnChanged delegate

--- a/_posts/2023-02-19-killcam.md
+++ b/_posts/2023-02-19-killcam.md
@@ -79,14 +79,27 @@ ULyraLocalPlayer::ULyraLocalPlayer()
 
 ## Record instant replay
 
-The next step is to start recording in every respawn, we can do that by overriding `SetPawn` in `ALyraPlayerController`. Since it will get called locally every time we posses a Pawn:
+The next step is to start recording in every respawn, we can do that by hooking locally to the `OnPossessedPawnChanged` delegate in `ALyraPlayerController`. Since it will get called every time we posses a different Pawn:
 
 {% highlight c++ %}
-void ALyraPlayerController::SetPawn(APawn* InPawn)
+void ALyraPlayerController::BeginPlay()
 {
-	Super::SetPawn(InPawn);
+	...
 
-	if (InPawn && IsLocalController())
+	// Listen for pawn possession changed events
+	if (IsLocalController())
+	{
+		OnPossessedPawnChanged.AddDynamic(this, &ThisClass::PossessedPawnChanged);
+		if (APawn* ControlledPawn = GetPawn())
+		{
+			PossessedPawnChanged(nullptr, ControlledPawn);
+		}
+	}
+}
+
+void ALyraPlayerController::PossessedPawnChanged(APawn* PreviousPawn, APawn* NewPawn)
+{
+	if (NewPawn)
 	{
 		Cast<ULyraLocalPlayer>(Player)->GetKillcamPlaybackManager()->SetUpKillcam(GetWorld());
 	}
@@ -94,6 +107,9 @@ void ALyraPlayerController::SetPawn(APawn* InPawn)
 {% endhighlight %}
 
 The in-memory killcam replay representation can free data that's not needed to rewind beyond `CVarKillcamBufferTimeInSeconds`. This means that every time we call `SetUpKillcam`, we'll fill the replay buffer up to `CVarKillcamBufferTimeInSeconds` seconds and it will advance in a [circular buffer](https://en.wikipedia.org/wiki/Circular_buffer) manner. This value shall be adjusted accordingly given the Local Player-end memory budget determined for your project.
+
+Overriding `SetPawn` won't yield the same results, as `SetPawn` doesn't provide a mechanism to differ against the previous Pawn.
+{: .notice--info}
 
 ## Play and stop instant replay
 
