[FIX] Killcams article

--- a/_posts/2023-02-19-killcam.md
+++ b/_posts/2023-02-19-killcam.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: "Implementing Instant Replays (Killcam) on Lyra"
-excerpt: In this post you'll learn how to implement instant replays on Lyra.
+title: "Implementing Instant Replays (Killcam)"
+excerpt: In this post you'll learn how to implement instant replays.
 header:
   teaser: /assets/images/per-post/killcam/thumb.jpg
 author: Meta
@@ -15,7 +15,7 @@ tags:
   - Networking
 ---
 
-In this article we'll learn how to implement a killcam in Lyra. 
+In this article we'll learn how to implement a killcam. 
 
 # Introduction
 
@@ -30,11 +30,14 @@ A year ago (at the time of writing), a tutorial written by [Alex Koumandarakis](
 # Prerequisites
 
 To follow this tutorial you'll need the following resources:
-- [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/): Download through the Epic Games launcher.
-- Killcam sample code by Epic [(download here)](https://forums.unrealengine.com/uploads/short-url/8HbkXKZGbi2g383QZYzbw1PCLUa.zip). Add the header and the cpp file to your Lyra project. Ensure you change the `Pawn` and `PlayerState` references you'll find in the source code so it compiles.
+- [Lyra](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/) (optional): Download through the Epic Games launcher. Lyra is optional, but this article employs it to implement the feature.
+- Killcam sample code by Epic [(download here)](https://forums.unrealengine.com/uploads/short-url/8HbkXKZGbi2g383QZYzbw1PCLUa.zip). Add the header and the cpp file to your project. Ensure you change the `Pawn` and `PlayerState` references you'll find in the source code so it compiles.
 - Your IDE, like [Visual Studio](https://docs.unrealengine.com/4.26/en-US/ProductionPipelines/DevelopmentSetup/VisualStudioSetup/) and... some patience.
 
 With all the materials ready, we can start the implementation!
+
+**Note:** The implementation provided in this article only supports Dedicated Servers and isn't production ready. The provided code isn't totally reliable given the current state of [Game Features](https://docs.unrealengine.com/5.0/en-US/game-features-and-modular-gameplay-in-unreal-engine/) (UE 5.2), as they require some engine extra work to differ between the replay and game world; I expect future versions of the engine to improve this aspect, since to date, it is required to do some overengineering to control their execution scope. However, if you don't use Game Features, most of the concepts provided in this article will work out of the box.
+{: .notice--info}
 
 # Implementation
 
@@ -165,7 +168,17 @@ void ALyraPlayerController::ServerRequestKillcamStop_Implementation()
 
 `ServerRequestKillcamStop` can be used to notify the server that we are ready to respawn, however, to simplify our setup, we will rely on the `RespawnDelayDuration` variable defined in the `GA_AutoRespawn` Blueprint Ability.
 
-In addition we have to prevent the experience to load, for that we need to ensure `OnExperienceLoadComplete` does early out in our replay world. The best way I found for this is by checking against the `DynamicDuplicatedLevels` collection, however note that there might be better ways to do this, if you find out a better one, please let me know!
+For preview purposes, initialize these variables to the following values:
+- `RespawnDelayDuration`: 10.f - This variable is used in `GA_AutoRespawn` to determine the time between the character death and its respawn through `RequestPlayerRestartNextFrame`.
+- `KillcamDuration`: 8.f - This variable is employed in `ALyraPlayerController::StartKillcam` and determines the display time of the instant replay.
+
+If everything is setup corrently, after our death, we should see the instant replay for 8 seconds while the respawn is in coldown (10 seconds).
+
+### Experiences and Game Features 
+
+If you are using Lyra to implement the Killcam, you have to deal with Game Features and their execution scope, which isn't trivially simple...
+
+First, we have to prevent the Experience to load in the replay world, to do that we need to skip the code called in `OnExperienceLoadComplete`. We also need to do the same for unloading part in `EndPlay`. The best way I found for this is by checking against the `DynamicDuplicatedLevels` collection, however note that there might be better ways to do this, if you find out a better one, please let me know!
 
 {% highlight c++ %}
 void ULyraExperienceManagerComponent::OnExperienceLoadComplete()
@@ -174,17 +187,27 @@ void ULyraExperienceManagerComponent::OnExperienceLoadComplete()
 	// Nothing to do here if the DuplicateCollection exists and is visible
 	if (DuplicateCollection && DuplicateCollection->IsVisible())
 	{
+		OnExperienceFullLoadCompleted();
+		return;
+	}
+	...
+}
+
+void ULyraExperienceManagerComponent::EndPlay(const EEndPlayReason::Type EndPlayReason)
+{
+	Super::EndPlay(EndPlayReason);
+
+	FLevelCollection* const DuplicateCollection = GetWorld()->FindCollectionByType(ELevelCollectionType::DynamicDuplicatedLevels);
+	// Nothing to do here if the DuplicateCollection exists
+	if (DuplicateCollection)
+	{
 		return;
 	}
 	...
 }
 {% endhighlight %}
 
-For preview purposes, initialize these variables to the following values:
-- `RespawnDelayDuration`: 10.f - This variable is used in `GA_AutoRespawn` to determine the time between the character death and its respawn through `RequestPlayerRestartNextFrame`.
-- `KillcamDuration`: 8.f - This variable is employed in `ALyraPlayerController::StartKillcam` and determines the display time of the instant replay.
-
-If everything is setup corrently, after our death, we should see the instant replay for 8 seconds while the respawn is in coldown (10 seconds).
+Besides culling the feature activation, we might find other issues, like animations not playing after the first death cam. However, I'm going to leave those issues to the reader as it goes a bit beyond the scope of the article. 
 
 ## Setting up the ViewTarget
 
