[FIX] Fixing conceptual oopsie (oversight)

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -79,7 +79,7 @@ Abilities expose a section in their Class Default Object (CDO) to define a serie
 ![Ability tags]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-1.PNG){: .align-center}
 
 In summary, this ability does the following:
-* **Ability Tags**: Grants the _Ability.PlayerActivated_ tag to the ability owner.
+* **Ability Tags**: The _Ability.PlayerActivated_ tag identifies this ability.
 * **Cancel Abilities with Tag**: Cancels all the abilities with the _Ability.LocomotionControl_ tag.
 * **Block Abilities with Tag**: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
 * **Activation Blocked Tags**: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
