[UPD] Killcam new URL, new self-contained

--- a/_posts/2023-02-19-killcam.md
+++ b/_posts/2023-02-19-killcam.md
@@ -31,7 +31,7 @@ A year ago (at the time of writing), a tutorial written by [Alex Koumandarakis](
 
 To follow this tutorial you'll need the following resources:
 - [Lyra (at least 5.2)](https://docs.unrealengine.com/5.0/en-US/lyra-sample-game-in-unreal-engine/) (optional): Download through the Epic Games launcher. Lyra is optional, but this article employs it to implement the feature.
-- Killcam sample code by Epic [(download here)](https://forums.unrealengine.com/uploads/short-url/8HbkXKZGbi2g383QZYzbw1PCLUa.zip). Add the header and the cpp file to your project. Ensure you change the `Pawn` and `PlayerState` references you'll find in the source code so it compiles.
+- Killcam sample code by Epic [(download here)](https://github.com/vorixo/devtricks/raw/master/assets/images/per-post/killcam/ExampleKillcamPlayback.zip). Add the header and the cpp file to your project. Ensure you change the `Pawn` and `PlayerState` references you'll find in the source code so it compiles.
 - Your IDE, like [Visual Studio](https://docs.unrealengine.com/4.26/en-US/ProductionPipelines/DevelopmentSetup/VisualStudioSetup/) and... some patience.
 
 With all the materials ready, we can start the implementation!
